--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "lint": "eslint src/*.js",
     "test": "mocha tests/**/*.spec.js --require babel-register --reporter nyan",
     "test:tdd": "npm run test -- --watch",
-    "test:coverage": "nyc npm run test"
+    "test:coverage": "nyc npm run test",
+    "prepush": "npm run lint && npm run test:coverage"
   },
   "preferGlobal": true,
   "bin": {
