--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,14 @@
 language: node_js
 node_js:
-  - "7"
+  - "9"
+
 cache:
   directories:
     "node_modules"
 
 before_script:
+  - chmod +x src/main.js
   - npm run build
 
 after_success:
-  - npm run test:coverage
+  - npm run coveralls
