--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "services-checker",
-  "version": "1.1.1",
+  "version": "1.1.2",
   "description": "A Node.js CLI that checks if most common development services are running.",
   "main": "src/index.js",
   "check-coverage": true,
@@ -13,12 +13,15 @@
     "test": "mocha tests/**/*.spec.js --require babel-register --reporter nyan",
     "test:tdd": "npm run test -- --watch",
     "test:coverage": "nyc npm run test",
-    "prepush": "npm run lint && npm run test:coverage"
+    "coveralls": "npm run test:coverage && nyc report --reporter=text-lcov | coveralls"
   },
   "preferGlobal": true,
   "bin": {
     "services-checker": "bin/main.js"
   },
+  "files": [
+    "bin"
+  ],
   "nyc": {
     "functions": 80,
     "lines": 80,
@@ -56,12 +59,14 @@
     "babel-preset-env": "^1.6.1",
     "babel-register": "^6.26.0",
     "chai": "^4.1.2",
+    "coveralls": "^3.0.0",
     "cross-env": "^5.1.3",
     "eslint": "^4.15.0",
     "eslint-config-airbnb-base": "^12.1.0",
     "eslint-plugin-import": "^2.8.0",
     "husky": "^0.14.3",
     "mocha": "^4.1.0",
+    "mocha-lcov-reporter": "^1.3.0",
     "nock": "^9.1.6",
     "nyc": "^11.4.1",
     "rimraf": "^2.6.2",
